// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute with custom params should return success 1`] = `
Object {
  "data": Object {
    "input": "10000000000000000000",
    "inputDecimals": 18,
    "inputToken": "0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c",
    "output": "5239325125242389496139",
    "outputDecimals": 18,
    "outputToken": "0xe9e7cea3dedca5984780bafc599bd69add087d56",
    "rate": 523.932512524239,
    "result": 523.932512524239,
  },
  "jobRunID": "1",
  "result": 523.932512524239,
  "statusCode": 200,
}
`;

exports[`execute with from/to should return success 1`] = `
Object {
  "data": Object {
    "input": "1000000000000000000",
    "inputDecimals": 18,
    "inputToken": "0x8ac76a51cc950d9822d68b83fe1ad97b32cd580d",
    "output": "995786777529191071",
    "outputDecimals": 18,
    "outputToken": "0x55d398326f99059ff775485246999027b3197955",
    "rate": 0.9957867775291911,
    "result": 0.9957867775291911,
  },
  "jobRunID": "1",
  "result": 0.9957867775291911,
  "statusCode": 200,
}
`;
